--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/screen.css"> 
-        <script src="./script/app.js"></script>       
+        <script src="./script/validators.js"></script>       
     </head>
     <body>
         <section class="o-row o-row--lg o-row--login">
@@ -37,14 +37,14 @@
                         <p class="c-form-field js-email-field">
                             <label class="c-label" for="username">
                                 Email address  
-                                <span class="c-label__error-message js-email-message">This field is required</span>                              
+                                <span class="c-label__error-message js-email-message"></span>                              
                             </label>
                             <input class="c-input js-email-input" type="email" name="username" id="username" placeholder="e.g. john@doe.com" required>
                         </p>
                         <p class="c-form-field js-password-field">
                             <label class="c-label" for="password">
                                 Password
-                                <span class="c-label__error-message js-password-message">This field is required</span>
+                                <span class="c-label__error-message js-password-message"></span>
                             </label>
                             
                             <span class="c-toggle-password-container">
